@@ -1,3 +1,6 @@
+- warn the user and propose to install/quit-install before upgrading from a
+  partition where "/" is ext3 with block-size 1KB to avoid kernel bug (#37583)
+
 Version 10.21 - 25 March 2008
 
 - partitioning wizard: allow "Use free space" if there is an extended
